objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lead requires some action be taken by a rep</description>
        <inlineHelpText>This lead requires some action be taken by a rep</inlineHelpText>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>The date and time it was determined action is required</description>
        <inlineHelpText>The date and time it was determined action is required</inlineHelpText>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>The lead&apos;s phone number as verified or discovered by Conversica</description>
        <inlineHelpText>The lead&apos;s phone number as verified or discovered by Conversica</inlineHelpText>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <inlineHelpText>The current stage of the Conversica Conversation</inlineHelpText>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <inlineHelpText>The current status of the Conversica Conversation</inlineHelpText>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <inlineHelpText>The date and time the current Conversation Status was set</inlineHelpText>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the lead in Conversica</description>
        <inlineHelpText>The current status of the lead in Conversica</inlineHelpText>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received the lead</description>
        <inlineHelpText>The date and time Conversica received the lead</inlineHelpText>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Lead&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Lead’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica first sent a message to the lead</inlineHelpText>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Lead became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Lead became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead is ready to be contacted by a rep</description>
        <inlineHelpText>The lead is ready to be contacted by a rep</inlineHelpText>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the lead became &quot;Hot&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;Hot&quot; in Conversica</inlineHelpText>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the lead</description>
        <inlineHelpText>The date and time Conversica last sent a message to the lead</inlineHelpText>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the lead</description>
        <inlineHelpText>The date and time Conversica last received a response from the lead</inlineHelpText>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The lead may lose interest if not contacted soon by a rep</description>
        <inlineHelpText>The lead may lose interest if not contacted soon by a rep</inlineHelpText>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the lead became &quot;At Risk&quot; in Conversica</description>
        <inlineHelpText>The date and time the lead became &quot;At Risk&quot; in Conversica</inlineHelpText>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Lead.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Lead.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <inlineHelpText>Options field for this object in Conversica</inlineHelpText>
        <label>Conversica Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Skip to follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of a lead.</description>
        <label>Deprecated Conversica Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Lead indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>AVA Stopped</fullName>
                </value>
                <value>
                    <fullName>Client Stopped</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Conversica Stopped</fullName>
                </value>
                <value>
                    <fullName>Preparing Lead</fullName>
                </value>
                <value>
                    <fullName>Sent Engagement</fullName>
                </value>
                <value>
                    <fullName>Sent Appt.</fullName>
                </value>
                <value>
                    <fullName>Sent Feedback</fullName>
                </value>
                <value>
                    <fullName>Sent Social</fullName>
                </value>
                <value>
                    <fullName>Received Engagement</fullName>
                </value>
                <value>
                    <fullName>Received Appt.</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Received Social</fullName>
                </value>
                <value>
                    <fullName>Messaging Complete</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Rep Stopped</fullName>
                </value>
                <value>
                    <fullName>CRM Stopped</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__Campaign__c</fullName>
        <label>Deprecated Conversica Campaign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Lead_Convert__c</fullName>
        <defaultValue>&quot;YES&quot;</defaultValue>
        <label>Allow_Lead_Convert</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Convert_Lead__c</fullName>
        <formula>OR(
  TEXT(LeadSource)==&quot;Package Installation&quot;,
  TEXT(LeadSource)==&quot;Package Installation - Sandbox&quot;
)</formula>
        <label>Batch Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Relationship_Score__c</fullName>
        <label>Best Relationship Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Status_CP__c</fullName>
        <description>The following field writes either &quot;Booked&quot; or &quot;Not Booked&quot; depending on whether a meeting is successfully booked or not. Notes: This field would only be relevant when using &quot;Concierge || Inbound Router&quot;. The value &quot;Booked&quot; will be written when the meeting is booked. The value &quot;Not Booked&quot; will be written based on the timeout (7 min, 10 min, etc) defined in Queues for prospects who didn&apos;t take action within your Router.

*You must have at least 1 queue in the &quot;Queues for prospects who didn&apos;t take action&quot; section of your router for the &quot;Not Booked&quot; value to write to Salesforce. If you have another system that is using this field to route and do not want to have Chili Piper distribute those leads who do not book, you can add a &quot;dummy&quot; queue into this section, with rules that will &quot;never match&quot;. ie RelatedLead.Email = 123.</description>
        <label>Booking Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Created_Date__c</fullName>
        <label>ClickDeploy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Expiry_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickDeploy Enterprise Trial Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Last_Login_Date__c</fullName>
        <label>ClickDeploy Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_License_Type__c</fullName>
        <label>ClickDeploy License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Org_Id__c</fullName>
        <label>ClickDeploy Salesforce Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Username__c</fullName>
        <label>ClickDeploy Salesforce Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_This_Month__c</fullName>
        <label>ClickDeploy Total Deploy This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Success_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Success Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>ClickDeploy User Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_utm_campaign__c</fullName>
        <inlineHelpText>Populated via Pardot integration.</inlineHelpText>
        <label>UTM Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_utm_content__c</fullName>
        <inlineHelpText>Populated via Pardot integration.</inlineHelpText>
        <label>UTM Content</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_utm_medium__c</fullName>
        <inlineHelpText>Populated via Pardot integration.</inlineHelpText>
        <label>UTM Medium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_utm_source__c</fullName>
        <inlineHelpText>Populated via Pardot integration.</inlineHelpText>
        <label>UTM Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_utm_term__c</fullName>
        <inlineHelpText>Populated via Pardot integration.</inlineHelpText>
        <label>UTM Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>5,001-7,500</fullName>
                </value>
                <value>
                    <fullName>7,501-10,000</fullName>
                </value>
                <value>
                    <fullName>10,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_made__c</fullName>
        <label># Contacts made</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB</relationshipLabel>
        <relationshipName>LeadToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadContactToDnB</label>
        <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB_Contact</relationshipLabel>
        <relationshipName>LeadToDnB_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Alerts__c</fullName>
        <label>Data Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_completion__c</fullName>
        <formula>IF(Data_completion_score__c  &gt;= 70, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;COMPLETE&quot;), 
  IF(Data_completion_score__c  &gt;= 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;NOT COMPLETED&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;NOT COMPLETED&quot;) ) )</formula>
        <inlineHelpText>This field evaluates the completion of the data. Anything not green is considered as not fully complete.</inlineHelpText>
        <label>Data completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_completion_score__c</fullName>
        <formula>IF(NOT(ISBLANK( TEXT(Salutation) )),10,0)+
IF(NOT(ISBLANK( FirstName )),10,0)+
IF(NOT(ISBLANK( LastName )),10,0)+
IF(NOT(ISBLANK( Company )),10,0)+
IF(NOT(ISBLANK( Title )),10,0)+
IF(NOT(ISBLANK( Email )),10,0)+
IF(NOT(ISBLANK( Phone )),10,0)+
IF(NOT(ISBLANK( Street )),10,0)+
IF(NOT(ISBLANK( City )),10,0)+
IF(NOT(ISBLANK( State )),10,0)+
IF(NOT(ISBLANK( PostalCode )),10,0)+
IF(NOT(ISBLANK( Country )),10,0)+
IF(NOT(ISBLANK( Website )),10,0)</formula>
        <label>Data completion score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Group_Label__c</fullName>
        <description>Label of the group to which this lead was assigned by Decisions on Demand</description>
        <inlineHelpText>Group to which this lead was assigned by Decisions on Demand</inlineHelpText>
        <label>Assignment Group Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Group__c</fullName>
        <description>Unique name or ID of the group to which this lead was assigned by Decisions on Demand</description>
        <inlineHelpText>Group to which this lead was assigned by Decisions on Demand</inlineHelpText>
        <label>Assignment Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Status__c</fullName>
        <defaultValue>&quot;Unknown&quot;</defaultValue>
        <description>Status of the most recent assignment by Decisions on Demand</description>
        <inlineHelpText>Status of the most recent assignment by Decisions on Demand</inlineHelpText>
        <label>Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DecsOnD__Assignment_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__DupeMatch_Tag__c</fullName>
        <description>Tag used by Decisions on Demand to determine whether a lead is in- or excluded from Duplicate Matching. Designed to be set by Apex code</description>
        <inlineHelpText>For Decisions on Demand internal use</inlineHelpText>
        <label>Duplicate Match Tag (DecsOnD)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Email_Domain_DecsOnD__c</fullName>
        <description>Domain part of the Email field. Used in Duplicate Rules. Computed by workflow rule</description>
        <label>Email Domain (DecsOnD)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Team_Size__c</fullName>
        <label>Delivery Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_to_bring_over_to_opp__c</fullName>
        <inlineHelpText>don&apos;t put on page layouts</inlineHelpText>
        <label>Description (to bring over to opp)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBQ_Added__c</fullName>
        <label>EBQ Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Comments__c</fullName>
        <label>EBQ Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EBQ_Connected__c</fullName>
        <label>EBQ Connected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Date__c</fullName>
        <label>EBQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_First_Touch__c</fullName>
        <label>EBQ First Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Next_Step__c</fullName>
        <label>EBQ Next Step</label>
        <type>Date</type>
    </fields>
</CustomObject>